[package]
name = "mpdsh"
version = "0.1.0"
authors = ["zuntansan"]
edition = "2018"
description = "Shell-like MPD client"
readme = "README.md"
homepage = "https://github.com/zuntan/mpdsh"
repository = "https://github.com/zuntan/mpdsh"
license = "MIT OR Apache-2.0"
keywords = [ "mpd", "music" ]
categories = [ "command-line-interface" ]

[dependencies]
getopts = "0.2"
rustyline = "6.2.0"
rustyline-derive = "0.3.1"
shell-words = "1.0.0"
lazy_static = "1.4.0"
regex = "1"
wildmatch = "1.0.10"
